requested changes from journal

--- a/data/references.bib
+++ b/data/references.bib
@@ -63,12 +63,10 @@
   author = {Daniel Falster and Rachael Gallagher and Elizabeth Heidi Wenk and Caitlan Baxter and Sam Allen and James Lawson},
   title = {{AusTraits: a curated plant trait database for the 
                    Australian flora}},
-  month = {dec},
-  year = {2019},
+  year = {2021},
   journal = {Zenodo},
-  issue = {v0.9.1},
+  volume = {v3.0.0},
   doi = {10.5281/zenodo.3583418},
-  url = {https://doi.org/10.5281/zenodo.3583418},
 }
 
 @misc{fitzjohn2016remake,
